--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -27,7 +27,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="16dp"
-        android:background="#fff"
+        android:background="@android:color/transparent"
         android:drawableRight="@drawable/ic_arrow_forward_black_24dp"
         android:text="@string/next"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -45,6 +45,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn_next"
         app:layout_constraintHorizontal_bias="0.0"
+        app:tabBackground="@drawable/tab_indicator_selector"
         app:layout_constraintStart_toStartOf="parent">
 
     </com.google.android.material.tabs.TabLayout>
