--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".segments.profile.view.ProfileActivity">
+    tools:context=".segments.profile.ProfileActivity">
 
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -40,6 +40,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:onClick="chooseBirthday"
             android:hint="Enter date of birth" />
 
         <androidx.appcompat.widget.AppCompatEditText
@@ -58,7 +59,20 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:inputType="number"
+            android:maxLength="3"
             android:hint="Enter current weight" />
+
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/entry_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="16dp"
+            android:onClick="chooseEntryDate"
+            android:hint="mm/dd/yyyy" />
+
 
         <androidx.appcompat.widget.AppCompatEditText
             android:id="@+id/target_weight"
@@ -67,6 +81,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
+            android:maxLength="3"
             android:hint="Enter target goal weight" />
 
         <androidx.appcompat.widget.AppCompatEditText
@@ -93,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="38dp"
             android:letterSpacing="0.1"
             android:onClick="addNewProfileContent"
             android:text="CREATE" />
