--- a/app/src/main/res/layout/table_row_histroy_items.xml
+++ b/app/src/main/res/layout/table_row_histroy_items.xml
@@ -21,10 +21,8 @@
         style="@style/Fitness.TextAppearance.AppCompat.Body2.Medium"/>
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/iv_weight_icon"
-        style="@style/Fitness.TextAppearance.AppCompat.Body2.Medium"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.05"
-        android:src="@drawable/ic_weight_loss_24dp" />
+        android:id="@+id/iv_weight"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_weight="0.05" />
 </TableRow>
